[gd_scene load_steps=34 format=3 uid="uid://bc8f1sgv6qrwv"]

[ext_resource type="Material" uid="uid://bn3h8cgifor8a" path="res://materials/grass.tres" id="1_l7u6l"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter.gd" id="2_518vg"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/stack/modifier_stack.gd" id="3_myllw"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/base_modifier.gd" id="4_0xns5"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/create_inside_random.gd" id="5_d1xix"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/randomize_transforms.gd" id="6_ake1m"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/relax.gd" id="7_8fbrb"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/project_on_geometry.gd" id="8_8j4ty"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_item.gd" id="9_t45yg"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_shape.gd" id="10_smjbo"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/box_shape.gd" id="11_vi1tw"]
[ext_resource type="Script" path="res://player.gd" id="12_7xu2k"]
[ext_resource type="ArrayMesh" uid="uid://bhi6ypdd04m7w" path="res://OBJ format/character-male-f.obj" id="13_kbc1e"]
[ext_resource type="PackedScene" uid="uid://bnoqqnstajlif" path="res://models/chest_01.glb" id="16_4kg5d"]
[ext_resource type="Script" path="res://CameraFollow.gd" id="18_trwpp"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_kre5x"]

[sub_resource type="Sky" id="Sky_sebal"]
sky_material = SubResource("ProceduralSkyMaterial_kre5x")

[sub_resource type="Environment" id="Environment_hycg4"]
background_mode = 2
sky = SubResource("Sky_sebal")
ambient_light_energy = 0.22
tonemap_mode = 2
tonemap_exposure = 2.52
tonemap_white = 12.12
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_w7pkr"]
size = Vector3(45.5496, 1.06543, 35.197)

[sub_resource type="Resource" id="Resource_1a5c6"]
script = ExtResource("5_d1xix")
amount = 250
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_07trp"]
script = ExtResource("6_ake1m")
position = Vector3(0.15, 0.15, 0.15)
rotation = Vector3(20, 360, 20)
scale = Vector3(0.1, 0.1, 0.1)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_d1bm5"]
script = ExtResource("7_8fbrb")
iterations = 3
offset_step = 0.2
consecutive_step_multiplier = 0.75
use_computeshader = true
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_0xa2k"]
script = ExtResource("8_8j4ty")
ray_direction = Vector3(0, -1, 0)
ray_length = 5.0
ray_offset = 5.0
remove_points_on_miss = false
align_with_collision_normal = false
max_slope = 90.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_7kkv4"]
script = ExtResource("3_myllw")
stack = Array[ExtResource("4_0xns5")]([SubResource("Resource_1a5c6"), SubResource("Resource_07trp"), SubResource("Resource_d1bm5"), SubResource("Resource_0xa2k")])

[sub_resource type="Resource" id="Resource_8qpsp"]
script = ExtResource("11_vi1tw")
size = Vector3(43.4729, 0, 33.8356)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ub6tb"]
radius = 0.675992
height = 1.43492

[sub_resource type="Resource" id="Resource_1t7uo"]
script = ExtResource("5_d1xix")
amount = 150
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_g808y"]
script = ExtResource("6_ake1m")
position = Vector3(0.15, 0.15, 0.15)
rotation = Vector3(20, 360, 20)
scale = Vector3(0.1, 0.1, 0.1)
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_vksxd"]
script = ExtResource("7_8fbrb")
iterations = 3
offset_step = 0.2
consecutive_step_multiplier = 0.75
use_computeshader = true
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_sh4o2"]
script = ExtResource("8_8j4ty")
ray_direction = Vector3(0, -1, 0)
ray_length = 5.0
ray_offset = 5.0
remove_points_on_miss = false
align_with_collision_normal = false
max_slope = 90.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_s8378"]
script = ExtResource("3_myllw")
stack = Array[ExtResource("4_0xns5")]([SubResource("Resource_1t7uo"), SubResource("Resource_g808y"), SubResource("Resource_vksxd"), SubResource("Resource_sh4o2")])

[sub_resource type="Resource" id="Resource_qi8op"]
script = ExtResource("11_vi1tw")
size = Vector3(46.4014, 1, 33.4751)

[sub_resource type="BoxShape3D" id="BoxShape3D_8n43p"]
size = Vector3(2.26898, 1.48004, 1.23975)

[node name="world" type="Node3D"]
transform = Transform3D(0.999947, -0.0102269, 0.000735097, 0.010224, 0.99994, 0.00382738, -0.000774213, -0.00381966, 0.999992, 1.05613, -0.495193, -0.702089)

[node name="world-env" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_hycg4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 6.00607, 7.29714, 2.50169)
shadow_enabled = true

[node name="floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.474126, -1.40062, 2.2446)
material_override = ExtResource("1_l7u6l")
use_collision = true
size = Vector3(45.2373, 1, 35.0762)

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0708334, -0.108016, -0.0230713)
shape = SubResource("BoxShape3D_w7pkr")

[node name="elements" type="CanvasLayer" parent="."]

[node name="game-over" type="Control" parent="elements"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="elements/game-over"]
layout_mode = 0
offset_left = 483.0
offset_top = 312.0
offset_right = 649.0
offset_bottom = 360.0
color = Color(0.933333, 0.054902, 0.0941176, 0.47451)

[node name="Label" type="Label" parent="elements/game-over/ColorRect"]
layout_mode = 0
offset_left = 33.0
offset_top = 15.0
offset_right = 270.0
offset_bottom = 48.0
text = "GAME OVER!"
uppercase = true

[node name="score" type="Control" parent="elements"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_right = 20.0
offset_bottom = 62.0
grow_horizontal = 2

[node name="ColorRect" type="ColorRect" parent="elements/score"]
layout_mode = 0
offset_left = 492.0
offset_top = 4.0
offset_right = 634.0
offset_bottom = 44.0
color = Color(0.921099, 0.929912, 0.94779, 1)

[node name="ScoreLabel" type="Label" parent="elements/score/ColorRect"]
layout_mode = 0
offset_left = 12.0
offset_top = -2.0
offset_right = 125.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.0967137, 0.0483952, 0.00961629, 1)
theme_override_colors/font_shadow_color = Color(0, 0.360784, 0.509804, 0.345098)
theme_override_font_sizes/font_size = 30
text = "Score: 0"
vertical_alignment = 1

[node name="you-won" type="Control" parent="elements"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="elements/you-won"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 468.0
offset_top = 268.0
offset_right = 630.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.658824, 0.835294, 0.384314, 0.811765)

[node name="WinLabel" type="Label" parent="elements/you-won/ColorRect"]
layout_mode = 0
offset_left = -43.0
offset_top = -1.0
offset_right = 243.0
offset_bottom = 41.0
theme_override_font_sizes/font_size = 30
text = "YOU WON!!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="timer" type="ColorRect" parent="elements"]
offset_left = 934.0
offset_top = 50.0
offset_right = 1161.0
offset_bottom = 96.0

[node name="TimerLabel" type="Label" parent="elements/timer"]
layout_mode = 0
offset_left = 35.0
offset_top = -1.0
offset_right = 213.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0, 0, 0, 0.592157)
theme_override_colors/font_shadow_color = Color(0.104586, 0.446395, 0.420835, 1)
theme_override_font_sizes/font_size = 30
text = "Time left: 60"
horizontal_alignment = 1

[node name="protonScatter-useless" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.201468, 1.42469, 0.107577)
script = ExtResource("2_518vg")
show_output_in_tree = true
modifier_stack = SubResource("Resource_7kkv4")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="1" type="Node3D" parent="protonScatter-useless"]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -2.06352, -2.51694, -2.43131)
script = ExtResource("9_t45yg")
path = "res://addons/proton_scatter/demos/assets/bush.tscn"

[node name="2" type="Node3D" parent="protonScatter-useless"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -2.06352, -2.51694, -2.43131)
script = ExtResource("9_t45yg")
path = "res://addons/proton_scatter/demos/assets/pine_tree.tscn"

[node name="3" type="Node3D" parent="protonScatter-useless"]
transform = Transform3D(0.497553, -0.0493672, -0.00201462, 0.049287, 0.497346, -0.0147444, 0.00345972, 0.0144737, 0.499779, -2.06352, -2.51694, -2.43131)
script = ExtResource("9_t45yg")
proportion = 30
path = "res://addons/proton_scatter/demos/assets/grass_2.tscn"

[node name="ScatterShape" type="Node3D" parent="protonScatter-useless"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0.102377, -1.34595, 1.93366)
script = ExtResource("10_smjbo")
shape = SubResource("Resource_8qpsp")

[node name="ScatterOutput" type="Marker3D" parent="protonScatter-useless"]

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(0.99655, -0.0158866, -0.0814584, 0.0148193, 0.999797, -0.0136903, 0.0816593, 0.0124359, 0.996583, 1.30484, -0.0155023, 0.115926)
collision_layer = 2
collision_mask = 13
script = ExtResource("12_7xu2k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1.29885, 0.054533, 0.00501476, -0.0545127, 1.29885, -0.00526285, -0.00523107, 0.00504789, 1.29998, -0.873564, -0.830038, 0.286757)
mesh = ExtResource("13_kbc1e")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, -5.82077e-09, 2.98023e-08, -2.37487e-08, 1, -7.45058e-09, 0, -1.11759e-08, 1, -0.860688, -0.360373, 0.299303)
shape = SubResource("CapsuleShape3D_ub6tb")

[node name="CameraPivot" type="Node3D" parent="Player" node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = ExtResource("18_trwpp")
player = NodePath("..")

[node name="Camera3D" type="Camera3D" parent="Player/CameraPivot"]
transform = Transform3D(-1.66338, -0.0454462, -0.094179, -0.03972, 1.66313, -0.101013, 0.0967335, -0.0985693, -1.66093, -1, 0, -4)
fov = 86.8061

[node name="GameTimer" type="Timer" parent="Player"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="protonScatter-main" type="Node3D" parent="."]
script = ExtResource("2_518vg")
modifier_stack = SubResource("Resource_s8378")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="big-rocks" type="Node3D" parent="protonScatter-main"]
script = ExtResource("9_t45yg")
proportion = 20
path = "res://addons/proton_scatter/demos/assets/large_rock.tscn"

[node name="trees" type="Node3D" parent="protonScatter-main"]
script = ExtResource("9_t45yg")
proportion = 20
path = "res://addons/proton_scatter/demos/assets/pine_tree.tscn"

[node name="benches" type="Node3D" parent="protonScatter-main"]
script = ExtResource("9_t45yg")
proportion = 40
path = "res://addons/proton_scatter/demos/assets/fence_planks.tscn"

[node name="ScatterShape" type="Node3D" parent="protonScatter-main"]
transform = Transform3D(1, -7.14635e-10, -2.98023e-08, 1.1039e-09, 1, 0, 2.98605e-08, 2.32831e-10, 1, 0.0409194, -0.349631, 1.67835)
script = ExtResource("10_smjbo")
shape = SubResource("Resource_qi8op")

[node name="chest-1" parent="." groups=["Treasures"] instance=ExtResource("16_4kg5d")]
transform = Transform3D(0.249987, 0.002556, -0.000193553, -0.00255672, 0.249985, -0.000954916, 0.000183779, 0.000956846, 0.249998, 5.73943, -0.759463, -2.33665)

[node name="TreasureArea" type="Area3D" parent="chest-1"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="chest-1/TreasureArea"]
transform = Transform3D(0.999991, 2.54052e-13, 4.3876e-13, 1.6875e-14, 1, 1.56541e-14, 9.57567e-16, -1.58762e-14, 0.999991, 0.0538638, -0.0572815, -0.119872)
shape = SubResource("BoxShape3D_8n43p")

[node name="chest-2" parent="." groups=["Treasures"] instance=ExtResource("16_4kg5d")]
transform = Transform3D(0.249987, 0.002556, -0.000193553, -0.00255672, 0.249985, -0.000954916, 0.000183779, 0.000956846, 0.249998, -13.5953, -0.602164, 8.30566)

[node name="TreasureArea" type="Area3D" parent="chest-2"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="chest-2/TreasureArea"]
transform = Transform3D(0.999991, 2.54039e-13, 3.16192e-13, 1.68752e-14, 1, 1.17684e-14, 3.46945e-18, -1.58762e-14, 0.999991, 0.0538635, -0.0572815, -0.119872)
shape = SubResource("BoxShape3D_8n43p")

[node name="chest-3" parent="." groups=["Treasures"] instance=ExtResource("16_4kg5d")]
transform = Transform3D(0.249987, 0.002556, -0.000193553, -0.00255672, 0.249985, -0.000954916, 0.000183779, 0.000956846, 0.249998, -10.4593, -0.577995, 3.84899)

[node name="TreasureArea" type="Area3D" parent="chest-3"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="chest-3/TreasureArea"]
transform = Transform3D(0.999991, 2.54039e-13, 3.16192e-13, 1.68752e-14, 1, 1.17684e-14, 3.46945e-18, -1.58762e-14, 0.999991, 0.0538635, -0.0572815, -0.119872)
shape = SubResource("BoxShape3D_8n43p")

[node name="chest-4" parent="." groups=["Treasures"] instance=ExtResource("16_4kg5d")]
transform = Transform3D(0.249987, 0.002556, -0.000193553, -0.00255672, 0.249985, -0.000954916, 0.000183779, 0.000956846, 0.249998, 3.15635, -0.777137, 6.74417)

[node name="TreasureArea" type="Area3D" parent="chest-4"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="chest-4/TreasureArea"]
transform = Transform3D(0.999991, 2.54039e-13, 3.16192e-13, 1.68752e-14, 1, 1.17684e-14, 3.46945e-18, -1.58762e-14, 0.999991, 0.0538635, -0.0572815, -0.119872)
shape = SubResource("BoxShape3D_8n43p")

[node name="chest-5" parent="." groups=["Treasures"] instance=ExtResource("16_4kg5d")]
transform = Transform3D(0.249987, 0.002556, -0.000193553, -0.00255672, 0.249985, -0.000954916, 0.000183779, 0.000956846, 0.249998, -6.84115, -0.720748, -1.40292)

[node name="TreasureArea" type="Area3D" parent="chest-5"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="chest-5/TreasureArea"]
transform = Transform3D(0.999991, 2.54039e-13, 3.16192e-13, 1.68752e-14, 1, 1.17684e-14, 3.46945e-18, -1.58762e-14, 0.999991, 0.0538635, -0.0572815, -0.119872)
shape = SubResource("BoxShape3D_8n43p")

[node name="chest-6" parent="." groups=["Treasures"] instance=ExtResource("16_4kg5d")]
transform = Transform3D(0.249987, 0.002556, -0.000193553, -0.00255672, 0.249985, -0.000954916, 0.000183779, 0.000956846, 0.249998, 0.215515, -0.731094, 12.5119)

[node name="TreasureArea" type="Area3D" parent="chest-6"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="chest-6/TreasureArea"]
transform = Transform3D(0.999991, 2.54039e-13, 3.16192e-13, 1.68752e-14, 1, 1.17684e-14, 3.46945e-18, -1.58762e-14, 0.999991, 0.0538635, -0.0572815, -0.119872)
shape = SubResource("BoxShape3D_8n43p")

[connection signal="timeout" from="Player/GameTimer" to="Player" method="_on_game_timer_timeout"]
